--- a/includes/headerSuperAdmin.html
+++ b/includes/headerSuperAdmin.html
@@ -13,7 +13,7 @@
                     </svg>
                 </div>
                 <div class="logo-text">
-                    <h1>Panel de Administración</h1>
+                    <h2>Panel de Administración</h2>
                 </div>
             </div>
 
@@ -22,7 +22,7 @@
                 <ul class="nav-links">
                     <li><a href="admin.html" class="nav-link">Panel</a></li>
                     <li><a href="inventario.html" class="nav-link">Inventario</a></li>
-                    <li><a href="#" class="nav-link" onclick="reportesAvanzados()">Reportes</a></li>
+                    <!--<li><a href="#" class="nav-link" onclick="reportesAvanzados()">Reportes</a></li>-->
                     <li><a href="#" class="nav-link" onclick="configurarSistema()">Configuración</a></li>
                 </ul>
             </nav>
