--- a/includes/headerAdmin.html
+++ b/includes/headerAdmin.html
@@ -27,7 +27,7 @@
             <!-- Usuario -->
             <div class="user-section">
                 <div class="user-menu">
-                    <button class="user-button" onclick="toggleUserMenu()">
+                    <button class="user-button" onclick="toggleAdminUserMenu()">
                         <div class="user-avatar">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
