--- a/includes/foot.html
+++ b/includes/foot.html
@@ -105,7 +105,7 @@
                 </div>
                 
                 <div class="system-info">
-                    <small>Última actualización: <span id="lastUpdate">--:--</span></small>
+                    <!-- <small>Última actualización: <span id="lastUpdate">--:--</span></small> -->
                     <small>Versión: 1.5.0</small>
                 </div>
             </div>
