--- a/includes/header.html
+++ b/includes/header.html
@@ -109,8 +109,8 @@
                 <a href="historial.html" class="mobile-nav-link">Historial</a>
                 <a href="contacto.html" class="mobile-nav-link">Contacto</a>
                 <div class="mobile-divider"></div>
-                <a href="perfil.html" class="mobile-nav-link">Mi Perfil</a>
-                <a href="configuracion.html" class="mobile-nav-link">Configuración</a>
+                <!--<a href="perfil.html" class="mobile-nav-link">Mi Perfil</a>
+                <a href="configuracion.html" class="mobile-nav-link">Configuración</a>-->
                 <a href="login.html" class="mobile-nav-link logout">Cerrar Sesión</a>
             </div>
         </div>
