--- a/includes/header.html
+++ b/includes/header.html
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         
-                        <div class="dropdown-menu">
+                        <!--<div class="dropdown-menu">
                             <a href="perfil.html" class="dropdown-item">
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
@@ -79,7 +79,7 @@
                                     <path d="M12 1v6m0 6v6m11-7h-6M7 12H1"/>
                                 </svg>
                                 Configuración
-                            </a>
+                            </a>-->
                             <div class="dropdown-divider"></div>
                             <a href="login.html" class="dropdown-item logout">
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
